force-app/main/default/objects/Demographic_Data_Event__e/Demographic_Data_Event__e.object-meta.xml
<CustomObject>
    <label>Demographic Data Event</label>
    <pluralLabel>Demographic Data Events</pluralLabel>
</CustomObject>