force-app/main/default/objects/Demographic_Data_Event__e/fields/Age_18_35_Pct__c.field-meta.xml
<CustomField>
    <fullName>Age_18_35_Pct__c</fullName>
    <label>Age 18 35 Pct</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>