force-app/main/default/objects/Demographic_Data_Event__e/fields/Avg_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Avg_Household_Income__c</fullName>
    <label>Avg Household Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>