force-app/main/default/objects/Demographic_Data_Event__e/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>