force-app/main/default/objects/Demographic_Data_Event__e/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>