force-app/main/default/objects/Demographic_Data_Event__e/fields/Income_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Income_Bracket__c</fullName>
    <label>Income Bracket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>