force-app/main/default/objects/Demographic_Data_Event__e/fields/Literacy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Literacy_Rate__c</fullName>
    <label>Literacy Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>