force-app/main/default/objects/Demographic_Data_Event__e/fields/Male_Population__c.field-meta.xml
<CustomField>
    <fullName>Male_Population__c</fullName>
    <label>Male Population</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>