force-app/main/default/objects/Demographic_Data_Event__e/fields/Population_Density__c.field-meta.xml
<CustomField>
    <fullName>Population_Density__c</fullName>
    <label>Population Density</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>