force-app/main/default/objects/Demographic_Data_Event__e/fields/Total_Population__c.field-meta.xml
<CustomField>
    <fullName>Total_Population__c</fullName>
    <label>Total Population</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>