force-app/main/default/objects/Demographic_Data_Event__e/fields/Urban_Rural__c.field-meta.xml
<CustomField>
    <fullName>Urban_Rural__c</fullName>
    <label>Urban Rural</label>
    <length>20</length>
    <type>Text</type>
</CustomField>