force-app/main/default/objects/Demographic_Data_Event__e/fields/Working_Population_Pct__c.field-meta.xml
<CustomField>
    <fullName>Working_Population_Pct__c</fullName>
    <label>Working Population Pct</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>